[gd_scene load_steps=11 format=3 uid="uid://chnafi5hyj38r"]

[ext_resource type="Script" path="res://screens/TitleScreen/TitleScreen.gd" id="1_eelfl"]
[ext_resource type="Texture2D" uid="uid://cg3duaj12mfrb" path="res://objects/Background/Sky.png" id="1_laeul"]
[ext_resource type="FontFile" uid="uid://b3w673kt7hxqg" path="res://thirdparty/fonts/VTF MisterPixel/Mister Pixel Regular.otf" id="2_veklw"]
[ext_resource type="PackedScene" uid="uid://djru7ay3t6hkn" path="res://screens/BootScreen/FallingPackages.tscn" id="3_wt8dk"]
[ext_resource type="Script" path="res://addons/sxgd/nodes/fx/screen-effects/SxFxBetterBlur/SxFxBetterBlur.gd" id="4_2cah2"]
[ext_resource type="Script" path="res://addons/sxgd/modules/SxFontAwesome/SxFaButton.gd" id="6_r4bgi"]
[ext_resource type="Script" path="res://addons/sxgd/nodes/ui/SxFullScreenConfirmationDialog.gd" id="7_wromt"]

[sub_resource type="Gradient" id="Gradient_nnili"]
offsets = PackedFloat32Array(0, 0.496774, 1)
colors = PackedColorArray(1, 1, 1, 0, 0, 0, 0, 0.403922, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_erfpe"]
gradient = SubResource("Gradient_nnili")
fill_from = Vector2(0.490826, 1)
fill_to = Vector2(0.509174, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0s5r3"]
bg_color = Color(0, 0, 0, 1)

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eelfl")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_laeul")

[node name="FallingPackages" parent="." instance=ExtResource("3_wt8dk")]
unique_name_in_owner = true
layout_mode = 1
package_count = 0
package_random_color = true

[node name="Gradient" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_erfpe")

[node name="SxFxBetterBlur" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("4_2cah2")
strength = 0.5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 45
theme_override_constants/margin_top = 45
theme_override_constants/margin_right = 45
theme_override_constants/margin_bottom = 45

[node name="MainMenu" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Title" type="RichTextLabel" parent="MarginContainer/MainMenu"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 2
theme_override_constants/outline_size = 2
theme_override_fonts/normal_font = ExtResource("2_veklw")
theme_override_fonts/italics_font = ExtResource("2_veklw")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center][wave amp=50 freq=10]Wobbly Eats[/wave]
[rainbow][i]by [url=https:///github.com/Srynetix]@Srynetix[/url][/i][/rainbow][/center]"
fit_content = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MainMenu"]
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/separation = 16

[node name="Play" type="Button" parent="MarginContainer/MainMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_veklw")
theme_override_font_sizes/font_size = 48
text = "Play"

[node name="Levels" type="Button" parent="MarginContainer/MainMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_veklw")
theme_override_font_sizes/font_size = 48
text = "Levels"

[node name="Quit" type="Button" parent="MarginContainer/MainMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_veklw")
theme_override_font_sizes/font_size = 48
text = "Quit"

[node name="ClearDataBtn" type="Button" parent="MarginContainer/MainMenu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_veklw")
theme_override_font_sizes/font_size = 24
text = "Clear data"

[node name="LevelSelectionSection" type="Control" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/LevelSelectionSection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/LevelSelectionSection/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/LevelSelectionSection/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("2_veklw")
theme_override_font_sizes/font_size = 48
text = "Levels"

[node name="GoBack" type="Button" parent="MarginContainer/LevelSelectionSection/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 10
expand_icon = true
script = ExtResource("6_r4bgi")
icon_name = "house"

[node name="Panel" type="Panel" parent="MarginContainer/LevelSelectionSection/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Scroll" type="ScrollContainer" parent="MarginContainer/LevelSelectionSection/VBoxContainer/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
mouse_filter = 2
follow_focus = true

[node name="LevelSelection" type="VBoxContainer" parent="MarginContainer/LevelSelectionSection/VBoxContainer/Panel/Scroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/separation = 16

[node name="ClearDataDialog" type="Panel" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0s5r3")
script = ExtResource("7_wromt")
message = "Are you sure you want to clear your saved data?"
show_title = false
